test/interp/spec/i32.load32_u.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/i32.load32_u.fail.wast
(;; STDERR ;;;
Error running "sexpr-wasm":
third_party/testsuite/i32.load32_u.fail.wast:1:52: unexpected token "i32.load32_u"
(module (memory 1) (func (param i32) (result i32) (i32.load32_u (get_local 0))))
                                                   ^^^^^^^^^^^^
third_party/testsuite/i32.load32_u.fail.wast:1:65: syntax error, unexpected (
(module (memory 1) (func (param i32) (result i32) (i32.load32_u (get_local 0))))
                                                                ^

;;; STDERR ;;)
